// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line classes renders as expected 1`] = `
<pre
  className="test-line"
>
  <span
    className="test-line-content"
  />
</pre>
`;

exports[`Line content renders as expected 1`] = `
<pre
  className="Console-Line"
>
  <span
    className="Console-Line-content"
  >
    foo bar
  </span>
</pre>
`;

exports[`Line empty renders as expected 1`] = `
<pre
  className="Console-Line"
>
  <span
    className="Console-Line-content"
  />
</pre>
`;

exports[`Line ps1 renders as expected 1`] = `
<pre
  className="Console-Line"
>
  <span
    className="Console-PS1"
  >
    ~
  </span>
  <span
    className="Console-Line-content"
  />
</pre>
`;

exports[`Line write renders as expected 1`] = `
<pre
  className="Console-Line"
>
  <span
    className="Console-Line-content"
  />
  <span
    className="Console-Cursor Console-Cursor--write"
  >
    t
  </span>
</pre>
`;
